Fix dropdown z-index

--- a/client/src/sass/include/_variables.scss
+++ b/client/src/sass/include/_variables.scss
@@ -175,10 +175,10 @@ $zindex: (
   popover         : 13000,
   tooltip         : 14000,
   loadbar         : 15000,
-  dropdown        : 17000,
-  help-popover    : 17000,
   privacymsg      : 17500,
   header          : 17500,
+  help-popover    : 17600,
+  dropdown        : 17600,
   modal           : 19000,
   hotkeys         : 19000,
   notification    : 20000
